spacing problem fixed

--- a/style.css
+++ b/style.css
@@ -6,12 +6,11 @@ h1{
     color: blueviolet;
 }
 .container{
-    
-    margin-top: 10%;
-    margin-bottom: 10%;
-    margin-left: 20%;
-    margin-right: 20%;
-    width: 320px;
+    margin-top: 100px;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    width: 80%;
     padding: 0;
 }
 .input-div{
